<resources>
    <string name="app_name">HealthApp</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="str_Correo">Correo</string>
    <string name="str_Contraseña">Contraseña</string>
    <string name="str_Acceder">Acceder</string>
    <string name="str_msg1_login_registro">No tengo cuenta? Crear una</string>
    <string name="str_idUser">Id</string>
    <string name="str_usuario">Usuario</string>
    <string name="str_otra_vez_contraseña">Confirma contraseña</string>
    <string name="str_crear_cuenta">Crear cuenta</string>
    <string name="str_Soy_Usuario">Ya soy Usurio? Iniciar Sesión</string>
</resources>
